# scythe

./: .buildinfo  .gitignore  .python-version  .travis.yml  MANIFEST.in  README.md  base.py  contributor-guide.html  crystal_structure.py  electron_microscopy.py  example.ipynb  extractors.html  genindex.html  goals.html  image.py  index.html  mixins.py  objects.inv  parsers.html  py-modindex.html  pyproject.toml  readthedocs.yaml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  test_requirements.txt  user-guide.html
.github/workflows/: ensure-pip-installable.yml  test-suite-and-docs.yml
_modules/: index.html
_modules/materials_io/: ase.html  base.html  crystal_structure.html  csv.html  dft.html  electron_microscopy.html  file.html  image.html
_modules/materials_io/adapters/: base.html
_modules/materials_io/utils/: grouping.html  interface.html
_modules/scythe/: ase.html  base.html  crystal_structure.html  csv.html  dft.html  electron_microscopy.html  file.html  image.html
_modules/scythe/adapters/: base.html
_modules/scythe/utils/: grouping.html  interface.html
_sources/: contributor-guide.rst.txt  extractors.rst.txt  goals.rst.txt
_sources/api/: scythe.rst.txt
_static/: documentation_options.js
api/: materials_io.html  scythe.html
data/cif/: 1548397.cif
docs/source/: conf.py  contributor-guide.rst  goals.rst  index.rst  materials_io.rst  parsers.rst  user-guide.rst
docs/source/api/: materials_io.rst  scythe.rst
materials_io/: __init__.py  ase.py  base.py  crystal_structure.py  csv.py  dft.py  electron_microscopy.py  file.py  filename.py  image.py  json.py  tdb.py  testing.py  utils.py  version.py  xml.py  yaml.py
materials_io/adapters/: __init__.py  base.py
materials_io/schemas/: electron_microscopy.json  file.json
materials_io/utils/: __init__.py  grouping.py  interface.py
scythe/: __init__.py  ase.py  base.py  crystal_structure.py  csv.py  dft.py  electron_microscopy.py  file.py  filename.py  image.py  json.py  tdb.py  testing.py  version.py  xml.py  yaml.py
scythe/adapters/: base.py
scythe/schemas/: file.json
scythe/utils/: __init__.py  grouping.py  interface.py
tests/: conftest.py  test_adapter.py  test_ase.py  test_base.py  test_crystal_structure.py  test_csv.py  test_dft.py  test_electron_microscopy.py  test_file.py  test_filename.py  test_image.py  test_json.py  test_tdb.py  test_utils.py  test_version.py  test_xml.py  test_yaml.py
tests/data/: test.csv
tests/data/crystal_structure/: Al2O3.cif  C13H22O3.cif  Ce3VO16.cif  diamond.cif
tests/data/json/: test_json.json
tests/data/tdb/: PbSSeTe_Na.TDB  test_AuSi.TDB  test_PbTe.TDB
tests/data/xml/: test_xml.xml
tests/data/yaml/: test_yaml.yaml
